--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             appId: "1:319539198262:web:c600365a5eab9945ea9b97"
         };
         const CLOUD_NAME = "dpua9ympq";
-        const UPLOAD_PRESET = "adansi_upload";
+        const UPLOAD_PRESET = "adansimart";
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
@@ -289,4 +289,5 @@
         renderFeed();
     </script>
 </body>
+
 </html>
