--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
         .loc-select { background: rgba(255,255,255,0.2); border: 1px solid rgba(212, 175, 55, 0.4); border-radius: 8px; padding: 4px 8px; font-size: 10px; font-weight: bold; color: white; outline: none; }
         .loc-select option { color: black; }
+
+        /* Animation for the call button */
+        .call-btn:active { transform: scale(0.9); background-color: #10b981; }
     </style>
 </head>
 <body id="main-body">
@@ -127,7 +130,6 @@
         let tempItemUrl = "";
         window.currentCategory = "All";
 
-        // Auth Listener
         onAuthStateChanged(auth, async (user) => {
             currentUser = user;
             if (user) {
@@ -137,7 +139,6 @@
             }
         });
 
-        // Filter Category Function
         window.filterCat = (cat) => {
             window.currentCategory = cat;
             document.querySelectorAll('.cat-btn').forEach(btn => {
@@ -147,7 +148,12 @@
             window.renderMarket();
         };
 
-        // Render Market Logic
+        // NEW: Global call function
+        window.callSeller = (event, phone) => {
+            event.stopPropagation(); // Prevents opening the details page
+            window.location.href = `tel:${phone}`;
+        };
+
         window.renderMarket = () => {
             const s = document.getElementById('searchInput').value.toLowerCase();
             const loc = document.getElementById('locationFilter').value;
@@ -159,6 +165,9 @@
 
             document.getElementById('market-grid').innerHTML = filt.map(a => {
                 const isCheap = parseFloat(a.price) < 50;
+                // Get WhatsApp/Phone from listing data
+                const phone = a.whatsapp || ""; 
+                
                 return `
                 <div onclick="window.viewDetails('${a.id}')" class="bg-white rounded-2xl shadow-sm border border-gray-100 overflow-hidden active:scale-95 transition-transform flex flex-col">
                     <div class="relative w-full">
@@ -169,15 +178,24 @@
                     <div class="p-3 flex-grow flex flex-col justify-between">
                         <p class="text-[11px] font-bold text-gray-800 uppercase line-clamp-2 leading-tight">${a.title}</p>
                         <div class="flex justify-between items-center mt-3">
-                            <p class="text-sm font-black ${isCheap ? 'text-green-500' : 'text-[#D4AF37]'}">₵${a.price}</p>
-                            <span class="text-[9px] font-bold bg-gray-50 text-gray-400 px-2 py-1 rounded-md border border-gray-100 uppercase">View</span>
+                            <div>
+                                <p class="text-[8px] text-gray-400 font-bold uppercase">${a.shopName || 'Seller'}</p>
+                                <p class="text-sm font-black ${isCheap ? 'text-green-500' : 'text-[#D4AF37]'}">₵${a.price}</p>
+                            </div>
+                            <div class="flex gap-1">
+                                <button onclick="window.callSeller(event, '${phone}')" class="call-btn bg-green-500 text-white p-2 rounded-lg shadow-sm">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                                    </svg>
+                                </button>
+                                <span class="text-[8px] font-bold bg-gray-100 text-gray-400 px-2 py-2 rounded-lg border border-gray-100 uppercase">View</span>
+                            </div>
                         </div>
                     </div>
                 </div>`;
             }).join('');
         };
 
-        // Update Profile UI (The Seller Form)
         function updateProfileUI() {
             if(!userData) return;
             document.getElementById('userName').innerText = userData.shopName;
@@ -210,7 +228,6 @@
             }
         }
 
-        // Post Item Logic
         window.postItem = async () => {
             const title = document.getElementById('pTitle').value;
             const price = document.getElementById('pPrice').value;
@@ -238,7 +255,6 @@
             }); 
         };
 
-        // Section Switcher
         window.showSection = (id) => {
             ['home', 'sell', 'profile'].forEach(v => document.getElementById(v+'-view').classList.add('hidden'));
             document.getElementById(id+'-view').classList.remove('hidden');
@@ -247,7 +263,6 @@
             window.scrollTo(0,0);
         };
 
-        // Real-time Listings Listener
         onSnapshot(query(collection(db, "listings"), orderBy("createdAt", "desc")), (snap) => {
             window.allAds = snap.docs.map(d => ({ id: d.id, ...d.data() })); 
             window.renderMarket();
