--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <option value="New Edubiase">New Edubiase</option>
                     <option value="Fomena">Fomena</option>
                     <option value="Adansi Asokwa">Adansi Asokwa</option>
+                    <option value="Adansi Akrofuom">Adansi Akrofuom</option>
                 </select>
             </div>
             <div class="bg-white rounded-xl p-3 flex items-center shadow-inner mb-4">
@@ -66,7 +67,7 @@
     </div>
 
     <div id="details-modal" class="fixed inset-0 bg-white z-[100] hidden overflow-y-auto page-fade">
-        <button onclick="window.closeDetails()" class="fixed top-6 left-6 bg-white/80 backdrop-blur-md shadow-lg rounded-full w-10 h-10 z-[110] font-bold flex items-center justify-center border">✕</button>
+        <button onclick="window.closeDetails()" class="fixed top-6 left-6 bg-white/90 backdrop-blur-md shadow-lg rounded-full w-10 h-10 z-[110] font-bold flex items-center justify-center border text-black">✕</button>
         <div id="modal-content" class="pb-32"></div>
     </div>
 
@@ -123,11 +124,19 @@
             window.renderMarket();
         };
 
+        window.copyToClipboard = (text) => {
+            navigator.clipboard.writeText(text);
+            alert("Phone number copied: " + text);
+        };
+
         window.viewDetails = (id) => {
             const ad = window.allAds.find(a => a.id === id);
             const phone = ad.whatsapp || "";
+            // Clean number for WhatsApp (remove leading 0, add 233)
+            const waPhone = phone.startsWith('0') ? '233' + phone.substring(1) : phone;
+
             document.getElementById('modal-content').innerHTML = `
-                <img src="${ad.image}" class="w-full h-[400px] object-cover">
+                <img src="${ad.image}" class="w-full h-[350px] object-cover">
                 <div class="p-6">
                     <div class="flex justify-between items-start mb-2">
                         <span class="bg-blue-100 text-blue-800 text-[10px] font-bold px-3 py-1 rounded-full uppercase">${ad.category}</span>
@@ -136,20 +145,24 @@
                     <h2 class="text-2xl font-black text-gray-900 leading-tight mb-2">${ad.title}</h2>
                     <p class="text-2xl font-black text-[#D4AF37] mb-6">₵${ad.price}</p>
                     
-                    <div class="bg-gray-50 p-4 rounded-2xl mb-6">
+                    <div class="bg-gray-50 p-4 rounded-2xl mb-6 border border-gray-100">
                         <p class="text-xs font-bold text-gray-400 uppercase mb-2">Description</p>
                         <p class="text-gray-700 leading-relaxed text-sm">${ad.desc || 'No description provided.'}</p>
                     </div>
 
                     <div class="border-t pt-6">
-                        <p class="text-center text-xs font-bold text-gray-400 uppercase mb-4">Contact Seller (${ad.shopName})</p>
-                        <div class="grid grid-cols-2 gap-3">
-                            <a href="https://wa.me/233${phone.substring(1)}?text=I'm interested in ${ad.title}" class="flex items-center justify-center gap-2 bg-green-500 text-white py-4 rounded-2xl font-black shadow-lg">
-                                <span>💬</span> WhatsApp
-                            </a>
-                            <a href="tel:${phone}" class="flex items-center justify-center gap-2 bg-[#001F3F] text-white py-4 rounded-2xl font-black shadow-lg">
-                                <span>📞</span> Call Now
-                            </a>
+                        <div class="flex flex-col gap-3">
+                            <div class="flex gap-2">
+                                <a href="https://wa.me/${waPhone}?text=I'm interested in ${encodeURIComponent(ad.title)}" target="_blank" class="flex-1 flex items-center justify-center gap-2 bg-green-500 text-white py-4 rounded-2xl font-black shadow-lg">
+                                    <span>💬</span> WhatsApp
+                                </a>
+                                <a href="tel:${phone}" class="flex-1 flex items-center justify-center gap-2 bg-[#001F3F] text-white py-4 rounded-2xl font-black shadow-lg">
+                                    <span>📞</span> Call Seller
+                                </a>
+                            </div>
+                            <button onclick="window.copyToClipboard('${phone}')" class="w-full py-3 text-gray-400 text-[10px] font-bold uppercase tracking-widest border-2 border-dashed rounded-xl">
+                                Copy Phone Number: ${phone}
+                            </button>
                         </div>
                     </div>
                 </div>
