--- a/download.html
+++ b/download.html
@@ -17,9 +17,9 @@
     <div id="android-box" class="w-full max-w-sm bg-white p-6 rounded-2xl shadow-sm border border-slate-200 mb-4">
         <h2 class="font-bold text-lg mb-2">Android User?</h2>
         <p class="text-sm text-slate-600 mb-4">Download our official app for the fastest experience.</p>
-        <a href="app-debug.apk" class="block w-full bg-blue-900 text-white text-center py-3 rounded-xl font-bold hover:bg-blue-800 transition">
-            Download APK
-        </a>
+     <a href="./app-debug.apk" class="block w-full bg-blue-900 text-white text-center py-3 rounded-xl font-bold hover:bg-blue-800 transition">
+    Download APK
+</a>
     </div>
 
     <div id="ios-box" class="w-full max-w-sm bg-white p-6 rounded-2xl shadow-sm border border-slate-200">
