--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>AdansiMart | Official Pro</title>
-    <link rel="manifest" href="/adansimart/manifest.json">
+    <link rel="manifest" href="manifest.json">
+
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#001F3F">
     <script>
       if ('serviceWorker' in navigator) {
@@ -84,17 +88,50 @@
         <header class="jiji-green p-5 text-white sticky top-0 z-50 shadow-md">
             <div class="flex justify-between items-center mb-4">
                 <h1 class="text-2xl font-black italic text-[#D4AF37]">ADANSIMART</h1>
-                <select id="locationFilter" onchange="window.renderMarket()" class="bg-white/20 border border-gold/30 rounded px-2 py-1 text-[10px] font-bold outline-none text-white">
-                    <option value="All Adansi" class="text-black">All Adansi 📍</option>
-                    <option value="Fomena" class="text-black">Fomena</option>
-                    <option value="New Edubiase" class="text-black">New Edubiase</option>
-                    <option value="Adansi Asokwa" class="text-black">Asokwa</option>
-                    <option value="Akrokerri" class="text-black">Akrokerri</option>
-                    <option value="Bodwesango" class="text-black">Bodwesango</option>
-                    <option value="Dompoase" class="text-black">Dompoase</option>
-                    <option value="Akrofuom" class="text-black">Akrofuom</option>
-                    <option value="Obuasi" class="text-black">Obuasi (Nearby)</option>
-                </select>
+              <select id="locationFilter" onchange="window.renderMarket()" class="bg-white/20 border border-gold/30 rounded px-2 py-1 text-[10px] text-white outline-none">
+    <option value="All Adansi" class="text-black">All Adansi 📍</option>
+    <option value="Fomena" class="text-black">Fomena (Capital)</option>
+    <option value="New Edubiase" class="text-black">New Edubiase</option>
+    <option value="Adansi Asokwa" class="text-black">Adansi Asokwa</option>
+    <option value="Akrofuom" class="text-black">Akrofuom</option>
+    <option value="Obuasi" class="text-black">Obuasi</option>
+    <option value="Dompoase" class="text-black">Dompoase</option>
+    <option value="Bodwesango" class="text-black">Bodwesango</option>
+    <option value="Fumso" class="text-black">Fumso</option>
+    <option value="Akrokerri" class="text-black">Akrokerri</option>
+    <option value="Adansi Praso" class="text-black">Adansi Praso</option>
+    <option value="Anhwiaso" class="text-black">Anhwiaso</option>
+    <option value="Aboabo No.1" class="text-black">Aboabo No.1</option>
+    <option value="Adiemra" class="text-black">Adiemra</option>
+    <option value="Hwiremoase" class="text-black">Hwiremoase</option>
+    <option value="Pipiiso" class="text-black">Pipiiso</option>
+    <option value="Brofoyedru" class="text-black">Brofoyedru</option>
+    <option value="Kojo Nkwanta" class="text-black">Kojo Nkwanta</option>
+    <option value="Akwanserem" class="text-black">Akwanserem</option>
+    <option value="Nyamebekyere" class="text-black">Nyamebekyere</option>
+    <option value="Atasi" class="text-black">Atasi</option>
+    <option value="Apagya" class="text-black">Apagya</option>
+    <option value="Atobiase" class="text-black">Atobiase</option>
+    <option value="Aworoso" class="text-black">Aworoso</option>
+    <option value="Wuruyie" class="text-black">Wuruyie</option>
+    <option value="Ayokua" class="text-black">Ayokua</option>
+    <option value="Kyeaboso" class="text-black">Kyeaboso</option>
+    <option value="Medoma" class="text-black">Medoma</option>
+    <option value="Esankwanta" class="text-black">Esankwanta</option>
+    <option value="Ankaase" class="text-black">Ankaase</option>
+    <option value="Bogyawe" class="text-black">Bogyawe</option>
+    <option value="Sanfo Aduam" class="text-black">Sanfo Aduam</option>
+    <option value="Abesewa" class="text-black">Abesewa</option>
+    <option value="Kwamang" class="text-black">Kwamang</option>
+    <option value="Amoafo" class="text-black">Amoafo</option>
+    <option value="Bekwai" class="text-black">Bekwai</option>
+    <option value="Adankrangya-Sawaaba" class="text-black">Adankrangya-Sawaaba</option>
+    <option value="Denyase" class="text-black">Denyase</option>
+    <option value="Abenkyim" class="text-black">Abenkyim</option>
+    <option value="Anwiankwanta" class="text-black">Anwiankwanta</option>
+    <option value="Akutreso" class="text-black">Akutreso</option>
+    <option value="Kwadwo Yentumi" class="text-black">Kwadwo Yentumi</option>
+</select>
             </div>
             <div class="bg-white rounded-xl p-3 flex items-center shadow-inner mb-4">
                 <input type="text" id="searchInput" onkeyup="window.renderMarket()" placeholder="Search products..." class="w-full outline-none text-black text-sm">
@@ -157,15 +194,50 @@
             <h1 class="text-3xl font-black mb-2 text-blue-900">Open Shop</h1>
             <input type="text" id="regName" placeholder="Full Name" class="input-box">
             <input type="text" id="regShop" placeholder="Shop/Business Name" class="input-box">
-            <select id="regTown" class="input-box">
-                <option value="Fomena">Fomena</option>
-                <option value="New Edubiase">New Edubiase</option>
-                <option value="Adansi Asokwa">Asokwa</option>
-                <option value="Akrokerri">Akrokerri</option>
-                <option value="Bodwesango">Bodwesango</option>
-                <option value="Dompoase">Dompoase</option>
-                <option value="Akrofuom">Akrofuom</option>
-            </select>
+          <select id="regTown" class="input-box">
+    <option value="" disabled selected>Select your Town</option>
+    <option value="Fomena">Fomena</option>
+    <option value="New Edubiase">New Edubiase</option>
+    <option value="Adansi Asokwa">Adansi Asokwa</option>
+    <option value="Akrofuom">Akrofuom</option>
+    <option value="Obuasi">Obuasi</option>
+    <option value="Dompoase">Dompoase</option>
+    <option value="Bodwesango">Bodwesango</option>
+    <option value="Fumso">Fumso</option>
+    <option value="Akrokerri">Akrokerri</option>
+    <option value="Adansi Praso">Adansi Praso</option>
+    <option value="Anhwiaso">Anhwiaso</option>
+    <option value="Aboabo No.1">Aboabo No.1</option>
+    <option value="Adiemra">Adiemra</option>
+    <option value="Hwiremoase">Hwiremoase</option>
+    <option value="Pipiiso">Pipiiso</option>
+    <option value="Brofoyedru">Brofoyedru</option>
+    <option value="Kojo Nkwanta">Kojo Nkwanta</option>
+    <option value="Akwanserem">Akwanserem</option>
+    <option value="Nyamebekyere">Nyamebekyere</option>
+    <option value="Atasi">Atasi</option>
+    <option value="Apagya">Apagya</option>
+    <option value="Atobiase">Atobiase</option>
+    <option value="Aworoso">Aworoso</option>
+    <option value="Wuruyie">Wuruyie</option>
+    <option value="Ayokua">Ayokua</option>
+    <option value="Kyeaboso">Kyeaboso</option>
+    <option value="Medoma">Medoma</option>
+    <option value="Esankwanta">Esankwanta</option>
+    <option value="Ankaase">Ankaase</option>
+    <option value="Bogyawe">Bogyawe</option>
+    <option value="Sanfo Aduam">Sanfo Aduam</option>
+    <option value="Abesewa">Abesewa</option>
+    <option value="Kwamang">Kwamang</option>
+    <option value="Amoafo">Amoafo</option>
+    <option value="Bekwai">Bekwai</option>
+    <option value="Adankrangya-Sawaaba">Adankrangya-Sawaaba</option>
+    <option value="Denyase">Denyase</option>
+    <option value="Abenkyim">Abenkyim</option>
+    <option value="Anwiankwanta">Anwiankwanta</option>
+    <option value="Akutreso">Akutreso</option>
+    <option value="Kwadwo Yentumi">Kwadwo Yentumi</option>
+</select>
             <input type="tel" id="regWhatsapp" placeholder="WhatsApp Number" class="input-box">
             <input type="email" id="regEmail" placeholder="Email Address" class="input-box">
             <input type="password" id="regPass" placeholder="Password (Min 6 chars)" class="input-box">
@@ -424,8 +496,7 @@
                     </div>
                 </div>
             `).join('');
-        } 
+        }
     </script>
 </body>
 </html>
-
